--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   font-family: 'Orbitron', sans-serif;
   color: white;
-  background: url('https://images.unsplash.com/photo-1581320547001-ea5ebfba0226?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
+ background: url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
+
   background-size: cover;
   position: relative;
   overflow-x: hidden;
