--- a/style.css
+++ b/style.css
@@ -2,50 +2,20 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: 'Orbitron', sans-serif;
-  color: #a0c4ff;
   height: 100%;
+  background-color: #000;
+  color: #a0c4ff;
   overflow-x: hidden;
 }
 
-#background {
+#stars {
   position: fixed;
   top: 0; left: 0;
-  width: 100vw; height: 100vh;
-  background: url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
-  background-size: cover;
-  z-index: -2;
-  filter: brightness(0.3) saturate(1.2);
-}
-
-.occhi {
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  gap: 50px;
-  z-index: 1;
-}
-
-.occhio {
-  width: 60px;
-  height: 60px;
-  background: #111;
-  border: 2px solid #0ff;
-  border-radius: 50%;
-  position: relative;
-  overflow: hidden;
-}
-
-.pupilla {
-  width: 20px;
-  height: 20px;
-  background: #00f;
-  border-radius: 50%;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  transition: transform 0.1s;
+  width: 100%;
+  height: 100%;
+  background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/starfield.png') repeat;
+  z-index: -1;
+  opacity: 0.4;
 }
 
 header {
@@ -86,4 +56,35 @@ p {
 .card:hover {
   transform: translateY(-10px);
   box-shadow: 0 0 30px #0ff;
+}
+
+.occhi {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  gap: 50px;
+  z-index: 10;
+}
+
+.occhio {
+  width: 60px;
+  height: 60px;
+  background: #111;
+  border: 2px solid #0ff;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+}
+
+.pupilla {
+  width: 20px;
+  height: 20px;
+  background: #00f;
+  border-radius: 50%;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  transition: transform 0.1s;
 }
