--- a/style.css
+++ b/style.css
@@ -10,12 +10,15 @@ body, html {
 
 #stars {
   position: fixed;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/starfield.png') repeat;
+  background: url('https://wallpaperaccess.com/full/2249339.jpg') repeat;
   z-index: -1;
   opacity: 0.4;
+}
+
 }
 
 header {
