--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
+
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Orbitron', sans-serif;
-  color: white;
-  background: url('https://images.unsplash.com/photo-1581320547001-ea5ebfba0226?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
+  background: url('sfondoportfolio.jpg') no-repeat center center fixed;
   background-size: cover;
-  position: relative;
-  overflow-x: hidden;
+  color: #a0c4ff;
 }
 
 .overlay {
