--- a/style.css
+++ b/style.css
@@ -1,46 +1,9 @@
-/* Import font */
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
-
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow: hidden;
-  font-family: 'Orbitron', sans-serif;
-  background: url('sfondoportfolio.jpg') no-repeat center center fixed;
-  background-size: cover;
-  color: #00aaff;
-}
-
-/* Testo introduttivo */
-.intro {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
+/* Messaggio di errore nel caricamento del modello 3D */
+model-viewer p.error {
+  color: red;
   text-align: center;
-  z-index: 1;
-}
-.intro h1 {
-  font-size: 2.5rem;
-  margin: 0;
-  text-shadow: 0 0 10px #000;
-}
-.intro p {
-  font-size: 1.1rem;
-  margin-top: 0.5rem;
-  color: #a0c4ff;
-}
-
-/* Model Viewer centrato */
-model-viewer {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 60vw;
-  max-width: 600px;
-  height: 60vw;
-  max-height: 600px;
-  transform: translate(-50%, -50%);
-  z-index: 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-top: 20px;
+  display: block;
 }
